force-app/main/default/objects/LLC_BI__Product__c/LLC_BI__Product__c.object-meta.xml
<CustomObject>
    <description>The Product Object contains information about the specific products in the product catalog and details of the association between products and product types.</description>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>