force-app/main/default/objects/LLC_BI__Product__c/fields/ffin_Product_Bucket__c.field-meta.xml
<CustomField>
    <fullName>ffin_Product_Bucket__c</fullName>
    <description>Used to determine the Product Bucket from FFIN&apos;s Loan Types by Call Code document.  Used in Automation</description>
    <label>Product Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>