force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Default_App__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Default_App__c</fullName>
    <description>This field is manually populated. It is optional. This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
    <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
    <label>Default Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>