force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Learn_More__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Learn_More__c</fullName>
    <description>The Administrator populates this optional text field with a URL to an external resource relevant to the selected product(s). By default, it is blank.</description>
    <inlineHelpText>Provide an external hyperlink where users can learn more about the product(s) they selected.</inlineHelpText>
    <label>Learn More</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>