force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Maintenance_Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maintenance_Screen_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrators use this lookup field to store the Screen Section that relates to a Product for maintenance.</description>
    <inlineHelpText>Enter the unique identifier for the Screen Section.</inlineHelpText>
    <label>Maintenance Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Products (Maintenance)</relationshipLabel>
    <relationshipName>Products_Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>