force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Minimum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum_Funding_Amount__c</fullName>
    <description>Manually populate this currency field with the minimum amount required to fund this product.</description>
    <label>Minimum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>