force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Other_Disclosures_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Disclosures_Description__c</fullName>
    <description>The user populates this optional field with a description of the other disclosure the account holder(s) will acknowledge receipt of on the signature card.</description>
    <inlineHelpText>Enter a description of the other disclosure the account holder(s) will acknowledge receipt of on the signature card.</inlineHelpText>
    <label>Other Disclosures Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>