force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Other_Disclosures_Received__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Disclosures_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Administrators populate this optional boolean field to acknowledge receipt of a disclosure other than the disclosures predefined on the signature card. By default, it is false.</description>
    <inlineHelpText>Select this field to acknowledge receipt of a disclosure other than the disclosures predefined on the signature card.</inlineHelpText>
    <label>Other Disclosures Received</label>
    <type>Checkbox</type>
</CustomField>