force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__Product_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Line_Name__c</fullName>
    <description>This field is required. The user manually populates this field. It represents the name of the product line.</description>
    <formula>LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>