force-app/main/default/objects/LLC_BI__Product__c/fields/LLC_BI__RealEstate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RealEstate__c</fullName>
    <description>This field is automatically set by LLC_BI__RealEstate_Type__c via a formula. This field is a text (true or false) field that is used to specify whether the product is considered a Real Estate type.</description>
    <formula>IF( ISPICKVAL(LLC_BI__RealEstate_Type__c, &apos;None&apos;), &quot;false&quot;,
IF(ISPICKVAL(LLC_BI__RealEstate_Type__c, &apos;&apos;), &quot;false&quot;, &quot;true&quot;   )
)</formula>
    <inlineHelpText>T/F</inlineHelpText>
    <label>Real Estate</label>
    <type>Text</type>
</CustomField>