force-app/main/default/objects/LLC_BI__Product__c/fields/nMONITOR__Product_Code__c.field-meta.xml
<CustomField>
    <fullName>nMONITOR__Product_Code__c</fullName>
    <description>The Administrators populate(s) this optional text field to translate products during the nightly sync from core. By default, it is blank.</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>