force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__Can_Pledge_Multiple_Collateral__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Can_Pledge_Multiple_Collateral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to indicate that when a Customer Portal user is applying for this product, they can pledge multiple pieces of collateral.</description>
    <inlineHelpText>Select this checkbox to indicate that when a Customer Portal user is applying for this product, they can pledge multiple pieces of collateral.</inlineHelpText>
    <label>Can Pledge Multiple Collateral</label>
    <type>Checkbox</type>
</CustomField>