force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__External_Name__c.field-meta.xml
<CustomField>
    <fullName>nPortal__External_Name__c</fullName>
    <description>This field is optional but recommended. Enter the product name that external Portal users should see. When populated, the external name is displayed in place of the standard product name.</description>
    <inlineHelpText>Enter the product name that should be displayed to external users in Customer Portal. If no name is provided here, the internal product name will be shown.</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>