force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Approval_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Approval_Next_Steps__c</fullName>
    <description>Use this rich text field to configure the approval message shown when the online application is approved through auto decision.</description>
    <inlineHelpText>Use this rich text field to configure the approval message when auto decision approves the online application.</inlineHelpText>
    <label>OA Approval Next Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>