force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Auto_Decision_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Auto_Decision_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox field to indicate if auto-decision is being used for online applications for this product.</description>
    <inlineHelpText>Select this checkbox field to indicate if auto-decision is being used for online applications for this product.</inlineHelpText>
    <label>OA Auto Decision Enabled</label>
    <type>Checkbox</type>
</CustomField>