force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Collapsed_Offer_Card_Summary__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Collapsed_Offer_Card_Summary__c</fullName>
    <description>Administrators populate this field set to display the fields that appear on the collapsed offers card in Online Application.</description>
    <inlineHelpText>Enter the API name for the collapsed offer card field set.</inlineHelpText>
    <label>OA Collapsed Offers Card Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>