force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Deposit_Funding_Failure_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Deposit_Funding_Failure_Next_Steps__c</fullName>
    <description>Manually populate this rich text field with the deposit funding next steps message that displays when trial deposits have not successfully processed.</description>
    <label>OA Deposit Funding Failure Next Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>