force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Expanded_Offer_Summary_Card__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Expanded_Offer_Summary_Card__c</fullName>
    <description>Administrators populate this field set to display the additional fields that appear on the expanded offers card in Online Application.</description>
    <inlineHelpText>Enter the API name for the expanded offer card field set.</inlineHelpText>
    <label>OA Expanded Offers Summary Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>