force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Not_Approved_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Not_Approved_Next_Steps__c</fullName>
    <description>Use this rich text field to configure the message displayed for auto decision when the system declines online application or manual review is required.</description>
    <inlineHelpText>Use this rich text field to configure the message displayed when auto decision declines the online application or the application requires manual review.</inlineHelpText>
    <label>OA Not Approved Next Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>