force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__OA_Offers_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__OA_Offers_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox field to determine if offers can generate in Online Application for the product it is assigned to.</description>
    <inlineHelpText>Select this checkbox field to indicate if offers automatically generate in online applications for this product.</inlineHelpText>
    <label>OA Offers Enabled</label>
    <type>Checkbox</type>
</CustomField>