force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__Online_Application_AS_Screen__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_AS_Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field is manually populated. Use it to define the screen that is displayed for the specific ancillary service in an online application.</description>
    <label>OA Ancillary Service Screen</label>
    <referenceTo>nFORCE__Screen__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>