force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__Online_Application_Topbar_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_Topbar_Fieldset__c</fullName>
    <description>Use this field to manually populate the name of the field set used to display a summary of information about this product in the Online Application topbar. This field set must be created during implementation time. This replaces the default field set with a field set specifically for that product&apos;s online application.</description>
    <inlineHelpText>Enter the name of the existing field set that should be used to render a summary of this product in the Online Applications topbar. If one is not entered, the default field set will be used.</inlineHelpText>
    <label>Online Application Topbar Fieldset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>