force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__Online_Application_Topbar_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_Topbar_Text__c</fullName>
    <description>Populate this field with header text that appears in the topbar for online applications for this product. This field is optional but recommended. If left blank, the default topbar text is displayed instead.</description>
    <inlineHelpText>Enter the text you would like to display in the topbar in Online Applications for this product. If left blank, the default topbar text will be displayed.</inlineHelpText>
    <label>Online Application Topbar Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>