force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__Online_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_Type__c</fullName>
    <description>Use this picklist field to select the type of online application appropriate for this product. For example, a deposit product should be assigned the Online Deposit Application type. Your selection ensures that the correct records are created when a Portal user starts an application.</description>
    <label>Online Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Deposit Application</fullName>
            </value>
            <value>
                <fullName>Online Loan Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>