force-app/main/default/objects/LLC_BI__Product__c/fields/nPortal__Your_Products_Component_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Your_Products_Component_Field_Set__c</fullName>
    <description>This is the field set that is displayed on the Your Products component on the Customer Engagement Solution dashboard.</description>
    <inlineHelpText>Enter the API name of the field set to be displayed on the Your Products component of the Customer Engagement Solution dashboard.</inlineHelpText>
    <label>Your Products Component Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>