force-app/main/default/objects/LLC_BI__Product__c/listViews/Online_Application_Enabled.listView-meta.xml
<ListView>
    <fullName>Online_Application_Enabled</fullName>
    <columns>NAME</columns>
    <columns>nPortal__Online_Application_Group__c</columns>
    <columns>LLC_BI__Product_Line_Name__c</columns>
    <columns>nPortal__External_Name__c</columns>
    <columns>nPortal__Online_Application_Enabled__c</columns>
    <columns>nPortal__Online_Application_Header_Text__c</columns>
    <columns>nPortal__Online_Application_Subheader_Text__c</columns>
    <columns>nPortal__Online_Application_Your_Account_Fieldset__c</columns>
    <columns>nPortal__Online_Application_Topbar_Fieldset__c</columns>
    <columns>nPortal__Online_Application_Topbar_Text__c</columns>
    <columns>nPortal__Online_Application_Type__c</columns>
    <columns>nPortal__Your_Products_Component_Field_Set__c</columns>
    <columns>nPortal__OA_Offers_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nPortal__Online_Application_Enabled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Online Application Enabled</label>
</ListView>